# pytest-samples

./: .gitattributes  .gitignore  README.md  index.html  pyproject.toml  requirements.txt  requirements_tests.txt  tox.ini
.github/workflows/: lint.yml  tests.yml  type.yml
coverage/: d_83215f75250c9a87___init___py.html  d_83215f75250c9a87__bootstrap_py.html  d_83215f75250c9a87__broker_base_py.html  d_83215f75250c9a87__broker_nostate_py.html  d_83215f75250c9a87__broker_stateful_py.html  d_83215f75250c9a87__meta_py.html  d_8622b866d7023627___init___py.html  d_8622b866d7023627__hashing_py.html  d_8622b866d7023627_types_py.html  d_9dc8d6fe75f8d5a4___init___py.html  d_9dc8d6fe75f8d5a4__collectiontools_py.html  d_9dc8d6fe75f8d5a4__iotools_py.html  d_9dc8d6fe75f8d5a4__iterabletools_py.html  d_e1457c012402c6a2___init___py.html  d_e1457c012402c6a2__defs_py.html  d_e1457c012402c6a2__engine_py.html  d_e1457c012402c6a2__exceptions_py.html  d_e1457c012402c6a2__logging_py.html  d_e1457c012402c6a2__session_py.html  index.html  status.json
coverage_report/: report_fallback.html
src/pytest_samples/: __init__.py  _hashing.py  types.py
src/pytest_samples/database/: __init__.py  _defs.py  _engine.py  _exceptions.py  _logging.py  _session.py
src/pytest_samples/plugin/: __init__.py  _bootstrap.py  _broker_base.py  _broker_nostate.py  _broker_stateful.py  _meta.py
src/pytest_samples/tools/: __init__.py  _collectiontools.py  _iotools.py  _iterabletools.py
tests/: conftest.py
tests/examples/: itest_examples_1.py  itest_examples_1b.py  itest_examples_2.py  itest_examples_3.py  itest_examples_4.py
tests/test_database/: test__engine.py  test_result_str.py
tests/test_database/test__session/: test_errors.py  test_transactions.py
tests/test_plugin/: test_nostate.py  test_stateful.py
tests/test_tools/: test__collectiontools.py  test__iotools.py  test__iterabletools.py
